# portable_code_repo

./: .gitignore  README.md
auto_paper/: url.txt
auto_paper/scripts/: test.py
auto_paper/webpage/: html_property..html  index.html  inline_block.html  style.css
c_code/: .clangd  CMakeLists.txt  chain.c  helix  kmp.cpp  kmp2.cpp  test1  test2.cpp
c_code/.cache/clangd/index/: heap.cpp.69E38768B7B7F786.idx  heap.hpp.F09B9A55CC214115.idx  huffman.cpp.BAF1B99B46EA6214.idx  kmp.cpp.898A7861A666CD84.idx  priority_queue.cpp.EAFE7151705C2801.idx  priority_queue.hpp.BA30A4176EC1066A.idx  test1.c.4BAB3CDC0F350199.idx  test2.cpp.E5DADC870304095C.idx
c_code/datastructure/: CMakeLists.txt  chainset.cpp  expression.cpp  graph_test.cpp  quicksort.cpp  rbtree.cpp  sort.cpp
c_code/datastructure/GraphAlgorithmsDemo/: CMakeLists.txt
c_code/datastructure/GraphAlgorithmsDemo/src/: dijkstra.cpp  graph.hpp  main.cpp
c_code/huffman/: CMakeLists.txt  huffman_coder.cpp  ref.cpp
c_code/huffman/inc/: bit_reader.hpp  bit_writer.hpp  canonical_coder.hpp  huffman.hpp  priority_queue.hpp
c_code/templates/: CMakeLists.txt  avl.cpp  avl.hpp  heap.cpp  heap.hpp  huffman.cpp  priority_queue.cpp  priority_queue.hpp  red_black_tree.hpp  test.cpp
markdown_repo/: complex.md  git_delete_history.md  nmcli_device.md  physics.md  statistics.md  translate.md
stm32/lib/fonts/: fonts.c
stm32/lib/pid_controller/: pid_controller.cpp  pid_controller.hpp
stm32/lib/ssd1306/: ssd1306.h
stm32/src/: main.cpp  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h
